火灾记录&app.less等公用文件同步

--- a/src/icon.less
+++ b/src/icon.less
@@ -1,63 +1,565 @@
+@bgSize: 900px auto;
+//白色左箭头
+.icon-back {
+    width: 10px;
+    height: 20px;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -420px no-repeat;
+    background-size: @bgSize;
+}
+
 //灰色右箭头
 .icon-link-arrow {
-  width: 9px;
-  height: 14px;
-  background: url('/static/icons/resource.png') -111px -234px no-repeat/@bg-size;
+    display: inline-block;
+    width: 6.2px;
+    height: 11.5px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -659.6px -420.3px no-repeat;
+    background-size: @bgSize;
+}
+
+//灰色上箭头
+.icon-link-arrow-up {
+    display: inline-block;
+    width: 12px;
+    height: 6.5px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -630px -422.8px no-repeat;
+    background-size: @bgSize;
+}
+
+//灰色下箭头
+.icon-link-arrow-down {
+    display: inline-block;
+    width: 12px;
+    height: 6.5px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -642px -422.8px no-repeat;
+    background-size: @bgSize;
+}
+
+.icon-link-arrow-down {
+    display: inline-block;
+    width: 12px;
+    height: 7px;
+    background: url('/static/icons/5_1/transparent_icons.png') -1284px/2 -845px/2 no-repeat;
+    background-size: @bgSize;
+}
+
+//小号-灰色向上箭头
+.icon-small-up-arrow {
+    background: url('/static/icons/5_1/transparent_icons.png') -1261px/2 -868px/2 no-repeat;
+    width: 7px;
+    height: 4px;
+    background-size: @bgSize;
+}
+
+//小号-灰色右箭头
+.icon-small-right-arrow {
+    background: url('/static/icons/5_1/transparent_icons.png') -1315px/2 -864px/2 no-repeat;
+    width: 9px / 2;
+    height: 8px;
+    background-size: cover;
 }
 
 //蓝色向下箭头
 .icon-arrow-down {
-  display: inline-block;
-  padding: 7px 7px;
-  background: url('/static/icons/pull_arrow.png') 0 0 no-repeat/cover;
+    display: inline-block;
+    padding: 6px 6px;
+    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
+    background-size: cover;
 }
 
 //蓝色向上箭头
 .icon-arrow-up {
-  display: inline-block;
-  padding: 7px 7px;
-  background: url('/static/icons/pull_arrow.png') 0 0 no-repeat/cover;
-  transform: rotate(-180deg);
-  -webkit-transform: rotate(-180deg); /* Safari 和 Chrome */
+    display: inline-block;
+    padding: 6px 6px;
+    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
+    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+    /* Safari 和 Chrome */
+    background-size: cover;
 }
 
 //蓝色向右箭头
 .icon-arrow-right {
-  display: inline-block;
-  padding: 7px 7px;
-  background: url('/static/icons/pull_arrow.png') 0 0 no-repeat/cover;
-  transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg); /* Safari 和 Chrome */
+    display: inline-block;
+    padding: 6px 6px;
+    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    /* Safari 和 Chrome */
+    background-size: cover;
 }
 
 //搜索icon
+.icon-search-gray {
+    padding: 6px;
+    font-size: 0;
+    background: url('/static/icons/resource.png') -822px 0 no-repeat;
+    background-size: @bg-size;
+}
+
 .icon-search {
-  width: 18px;
-  height: 18px;
-  font-size: 0;
-  background: url('/static/icons/search.png') 0 0 no-repeat/18px 18px;
+    width: 14px;
+    height: 14px;
+    font-size: 0;
+    background: url('/static/icons/5_1/transparent_icons.png') -688px/2 -960px/2 no-repeat;
+    background-size: @bgSize;
+}
+
+.icon-search-blue {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    font-size: 0;
+    background: url('/static/icons/5_1/transparent_icons.png') -330px -960px/2 no-repeat;
+    background-size: @bgSize;
 }
 
 //添加按钮
 .icon-add {
-  background: url('/static/icons/add_icon.png') 0 0 no-repeat;
-  background-size: cover;
-  height: 16px;
-  width: 16px;
-  display: block;
+    background: url('/static/icons/5_1/transparent_icons.png') -50px -420px no-repeat;
+    background-size: @bgSize;
+    height: 20px;
+    width: 20px;
+    display: block;
+}
+
+//蓝色勾-无背景-大
+.icon-tick-blue-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -110px -152px no-repeat;
+    width: 30px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//蓝色勾-无背景-中
+.icon-tick-blue-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -662px -518px no-repeat;
+    width: 16px;
+    height: 11.6px;
+    background-size: @bgSize;
+}
+
+//蓝色勾-无背景-小
+.icon-tick-blue-2 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -662px -518px no-repeat;
+    width: 8px;
+    height: 5.8px;
+    background-size: @bgSize;
+}
+
+//白色勾-中
+.icon-tick-white-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -806px 0 no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: @bgSize;
+}
+//白色勾-小
+.icon-tick-white-2 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -879px -3px no-repeat;
+    width: 12px;
+    height: 9px;
+    background-size: @bgSize;
 }
 
 //蓝色实心圆 + 白色勾
 .icon-tick {
-  background: url('/static/icons/resource.png') -820px -262px no-repeat;
-  background-size: @bg-size;
-  display: inline-block;
-  padding: 12px;
+    background: url('/static/icons/resource.png') -820px -262px no-repeat;
+    background-size: @bg-size;
+    display: inline-block;
+    padding: 12px;
 }
 
 //灰色 - 空心圆 + 倒感叹号
 .icon-info {
-  display: inline-block;
-  padding: 7px;
-  background: url('/static/icons/information.png') 0 0 no-repeat/cover;
+    display: inline-block;
+    padding: 7px;
+    background: url('/static/icons/information.png') 0 0 no-repeat;
+    background-size: cover;
+}
+
+.icon-patorl {
+    width: 14px;
+    height: 14px;
+    display: inline-block;
+    margin: 9px 8px 0 14px;
+    float: left;
+    &.success {
+        background: url('/static/icons/resource.png') -822px -14px no-repeat;
+        background-size: @bg-size;
+    }
+    &.distabled {
+        background: url('/static/icons/resource.png') -864px -14px no-repeat;
+        background-size: @bg-size;
+    }
+    &.wenti {
+        background: url('/static/icons/resource.png') -850px -14px no-repeat;
+        background-size: @bg-size;
+    }
+    &.need-input {
+        background: url('/static/icons/resource.png') -836px -14px no-repeat;
+        background-size: @bg-size;
+    }
+    &.distabled-icon {
+        background: url('/static/icons/resource.png') -864px -14px no-repeat;
+        background-size: @bg-size;
+    }
+    &.has-yh-icon {
+        background: url('/static/icons/resource.png') -850px -14px no-repeat;
+        background-size: @bg-size;
+    }
+}
+
+//消息喇叭图标(有消息)
+.icon-message-prompt-has {
+    width: 10px;
+    height: 35px / 2;
+    background: url('/static/icons/resource.png') -194px -188px no-repeat;
+    width: 15px;
+    height: 17px;
+    background-size: @bg-size;
+}
+
+//消息喇叭图标(无消息)
+.icon-message-prompt-no {
+    width: 10px;
+    height: 35px / 2;
+    background: url('/static/icons/resource.png') -194px -166px no-repeat;
+    width: 15px;
+    height: 17px;
+    background-size: @bg-size;
+}
+
+.disabled-btn {
+    opacity: .3;
+}
+
+//未勾选
+.icon-no-checked {
+    background: url('/static/icons/5_1/transparent_icons.png') -660px/2 -1152px/2 no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//已勾选
+.icon-is-checked {
+    background: url('/static/icons/5_1/transparent_icons.png') -660px/2 -1284px/2 no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//黄色-勾选
+.icon-yellow-checked {
+    background: url('/static/icons/5_1/transparent_icons.png') -748px/2 -1284px/2 no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//绿色-勾选
+.icon-green-checked {
+    background: url('/static/icons/5_1/transparent_icons.png') -704px/2 -1284px/2 no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//清除文本叉叉icon {}
+.icon-clear-text {
+    background: url('/static/icons/5_1/transparent_icons.png') -772px/2 -960px/2 no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+//警察叔叔icon
+.icon-police-uncle {
+    background: url('/static/icons/5_1/transparent_icons.png') -1262px/2 -1032px/2 no-repeat;
+    width: 28px / 2;
+    height: 32px / 2;
+    background-size: @bgSize;
+}
+
+//定位图标-实心
+.icon-location-gray {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -648.5px -516px no-repeat;
+    width: 14px;
+    height: 16px;
+    background-size: @bgSize;
+}
+
+//时钟icon
+.icon-clock {
+    background: url('/static/icons/5_1/transparent_icons.png') -1260px/2 -1064px/2 no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+//历史纪录
+.icon-history {
+    background: url('/static/icons/5_1/transparent_icons.png') -70px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+
+//临时巡查
+.icon-tpy-xc-task{
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -90px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+//日常巡查
+.icon-routine-xc-task{
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -110px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+
+//上传任务
+.icon-upload-task {
+    background: url('/static/icons/5_1/transparent_icons.png') -1260px/2 -940px/2 no-repeat;
+    width: 32px / 2;
+    height: 32px / 2;
+    background-size: @bgSize;
+}
+
+//日常值班
+.icon-dailyZhiban {
+    background: url('/static/icons/5_1/transparent_icons.png') -110px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+
+//临时值班
+.icon-tmpZhiban {
+    background: url('/static/icons/5_1/transparent_icons.png') -90px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+
+//add icon 蓝色添加按钮
+.icon-plus-blue {
+    background: url('/static/icons/5_1/transparent_icons.png') -330px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//圆圆的红色删除按钮
+.icon-remove-red {
+    background: url('/static/icons/5_1/transparent_icons.png') -374px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//删除-垃圾桶icon
+.icon-delete {
+    background: url('/static/icons/5_1/transparent_icons.png') -190px -420px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//禁用
+.icon-disable {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -170.3px -420px no-repeat;
+    width: 19.5px;
+    height: 19.5px;
+    background-size: @bgSize;
+}
+
+//编辑header icon
+.icon-edit-header {
+    background: url('/static/icons/5_1/transparent_icons.png') -130px -420px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
+
+//设置图标
+.icon-setting {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -150px -420px no-repeat;
+    background-size: @bgSize;
+}
+
+//未开始
+.icon-not-start {
+    background: url('/static/icons/5_1/transparent_icons.png') -1388px/2 -940px/2 no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: @bgSize;
+}
+
+//未审核
+.icon-not-review {
+    background: url('/static/icons/5_1/transparent_icons.png') -1292px/2 -940px/2 no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: @bgSize;
+}
+
+//已完成
+.icon-is-finish {
+    background: url('/static/icons/5_1/transparent_icons.png') -1324px/2 -940px/2 no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: @bgSize;
+}
+
+//已超期
+.icon-time-up {
+    background: url('/static/icons/5_1/transparent_icons.png') -1356px/2 -940px/2 no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: @bgSize;
+}
+
+//设备状态-绿
+.icon-device-succ {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -576px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//设备状态-黄
+.icon-device-warn {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -652px -576px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//设备状态-红
+.icon-device-danger {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -674px -576px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//loading 蓝色圈圈
+.loading-circle {
+    background: url('/static/icons/5_1/transparent_icons.png') -1260px/2 -1384px/2 no-repeat;
+    width: 80px;
+    height: 80px;
+    background-size: @bgSize;
+}
+
+//小头像
+.icon-head-image-small {
+    background: url('/static/icons/5_1/transparent_icons.png') -1260px/2 -1604px/2 no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+//加号蓝色 无背景 大
+.icon-plus-blue-0{
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -330px -420px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+//加号蓝色 无背景 小
+.icon-plus-blue-1{
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -360px -436px no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+//搜索记录-时钟icon
+.icon-history-clock {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -358px -480px no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+//定位图标
+.icon-location {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -372px -480px no-repeat;
+    width: 14px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+//蓝色圈+加号
+.icon-circle-plus {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -330px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//蓝色圈+减号
+.icon-circle-minus {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -352px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//红色圈+减号
+.icon-circle-minus-red {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -374px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//蓝色圈+下拉按钮
+.icon-circle-drop {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -396px -524px no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//照相机
+.icon-camera {
+    background: url('/static/icons/5_1/transparent_icons.png') -662px/2 -1400px/2 no-repeat;
+    width: 42px;
+    height: 32px;
+    background-size: @bgSize;
+}
+
+//扫码
+.icon-qr-code {
+    background: url('/static/icons/5_1/transparent_icons.png') -150px -80px no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: @bgSize;
 }
