优化Demo-标签功能

--- a/src/icon.less
+++ b/src/icon.less
@@ -563,3 +563,24 @@
     height: 40px;
     background-size: @bgSize;
 }
+
+.gradients90 {
+    background: -prefix-linear-gradient(left top, #8988FF, #88B1FF);
+    background: linear-gradient(to bottom right, #8988FF, #88B1FF);
+}
+.gradients80 {
+    background: -prefix-linear-gradient(left top, #52B0FE, #54CDFF);
+    background: linear-gradient(to bottom right, #52B0FE, #54CDFF);
+}
+.gradients70 {
+    background: -prefix-linear-gradient(left top, #34D986, #97DB37);
+    background: linear-gradient(to bottom right, #34D986, #97DB37);
+}
+.gradients60 {
+    background: -prefix-linear-gradient(left top, #FFC128, #FF9744);
+    background: linear-gradient(to bottom right, #FFC128, #FF9744);
+}
+.gradients50 {
+    background: -prefix-linear-gradient(left top, #FF8383, #FE5A8D);
+    background: linear-gradient(to bottom right, #FF8383, #FE5A8D);
+}
