优化社会单位的详情页面

--- a/src/icon.less
+++ b/src/icon.less
@@ -577,8 +577,8 @@
     background: linear-gradient(to bottom right, #34D986, #97DB37);
 }
 .gradients60 {
-    background: -prefix-linear-gradient(left top, #FFC128, #FF9744);
-    background: linear-gradient(to bottom right, #FFC128, #FF9744);
+    background: -prefix-linear-gradient(left top, #FF9744, #FFC128);
+    background: linear-gradient(to bottom right, #FF9744, #FFC128);
 }
 .gradients50 {
     background: -prefix-linear-gradient(left top, #FF8383, #FE5A8D);
