--- a/src/icon.less
+++ b/src/icon.less
@@ -584,3 +584,73 @@
     background: -prefix-linear-gradient(left top, #FF8383, #FE5A8D);
     background: linear-gradient(to bottom right, #FF8383, #FE5A8D);
 }
+
+.icon-star-10 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -1014px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-9 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -996px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-8 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -978px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-7 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -960px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-6 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -942px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-5 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -924px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-4 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -906px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-3 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -888px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-2 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -870px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
+
+.icon-star-1 {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -852px no-repeat;
+    width: 86px;
+    height: 14px;
+    background-size: @bgSize;
+}
