--- a/src/icon.less
+++ b/src/icon.less
@@ -654,3 +654,10 @@
     height: 14px;
     background-size: @bgSize;
 }
+
+.icon-header-image {
+    background: url('/static/icons/default_head.png') 0 0 no-repeat;
+    width: 34px;
+    height: 34px;
+    background-size: cover;
+}
