mt-heaer => mko-header

--- a/src/icon.less
+++ b/src/icon.less
@@ -661,3 +661,18 @@
     height: 34px;
     background-size: cover;
 }
+
+.icon-message {
+    background: url('/static/icons/5_1/transparent_icons.png') -110px/2 -901px/2 no-repeat;
+    width: 22px;
+    height: 22px;
+    background-size: @bgSize;
+}
+
+//白色右箭头
+.icon-arrow-right-white {
+    background: url('/static/icons/5_1/transparent_icons.png') -1343px/2 -839px/2 no-repeat;
+    width: 7px;
+    height: 13px;
+    background-size: @bgSize;
+}
