--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -291,3 +291,35 @@
 .has-message-data {
     background-position-y: -188px;
 }
+
+.header-right {
+    .message-count, .more-message-count {
+        position: absolute;
+        background-color: #ff6666;
+        border-radius: 50%;
+        z-index: 20;
+        border: 1px solid #ffffff;
+        text-align: center;
+        font-size: 12px;
+    }
+    .message-count {
+        right: 10px;
+        width: 14px;
+        height: 14px;
+        line-height: 14px;
+        top: 7px;
+    }
+    .more-message-count {
+        right: 12px;
+        width: 8px;
+        height: 8px;
+        top: 10px;
+    }
+    .icon-message {
+        position: absolute;
+        right: 14px;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+    }
+}
