--- a/src/app.less
+++ b/src/app.less
@@ -656,3 +656,17 @@ textarea {
 .center {
     text-align: center;
 }
+
+.mint-header, .header-wrap {
+    .mint-header-title {
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: 40px;
+        line-height: 40px;
+        width: 70%;
+    }
+}
