--- a/src/config.less
+++ b/src/config.less
@@ -54,25 +54,34 @@
 //函数
 //0.5px边框
 .border-top(@color) {
-    .border-init(0);
-}
-
-.border-btm(@color) {
-    .border-init(200%);
-}
-
-.border-init(@height) {
     position: relative;
     &:after {
         content: '';
         position: absolute;
         left: 0;
         top: 0;
-        width: 200%;
-        height: @height;
+        width: 100%;
+        height: 1px;
         box-sizing: border-box;
-        transform: scale(.5, .5);
-        -webkit-transform: scale(.5, .5);
+        transform: scale(1, .5);
+        -webkit-transform: scale(1, .5);
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        border-bottom: 1px solid @color;
+    }
+}
+.border-btm(@color) {
+    position: relative;
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        box-sizing: border-box;
+        transform: scale(1, .5);
+        -webkit-transform: scale(1, .5);
         transform-origin: 0 0;
         -webkit-transform-origin: 0 0;
         border-bottom: 1px solid @color;
