--- a/src/config.less
+++ b/src/config.less
@@ -55,7 +55,7 @@
 //0.5px边框
 .border-top(@color) {
     position: relative;
-    &:after {
+    &:before {
         content: '';
         position: absolute;
         left: 0;
@@ -76,7 +76,7 @@
         content: '';
         position: absolute;
         left: 0;
-        bottom: -1px;
+        bottom: 0;
         width: 100%;
         height: 1px;
         box-sizing: border-box;
