--- a/src/icon.less
+++ b/src/icon.less
@@ -10,9 +10,9 @@
 //灰色右箭头
 .icon-link-arrow {
     display: inline-block;
-    width: 6.2px;
-    height: 11.5px;
-    background: url('/static/icons/5_1/transparent_icons.png')  -659.6px -420.3px no-repeat;
+    width: 12px;
+    height: 12px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -654px -420px no-repeat;
     background-size: @bgSize;
 }
 
@@ -20,8 +20,8 @@
 .icon-link-arrow-up {
     display: inline-block;
     width: 12px;
-    height: 6.5px;
-    background: url('/static/icons/5_1/transparent_icons.png')  -630px -422.8px no-repeat;
+    height: 12px;
+    background: url('/static/icons/5_1/transparent_icons.png')  -630px -420px no-repeat;
     background-size: @bgSize;
 }
 
@@ -29,41 +29,34 @@
 .icon-link-arrow-down {
     display: inline-block;
     width: 12px;
-    height: 6.5px;
-    background: url('/static/icons/5_1/transparent_icons.png')  -642px -422.8px no-repeat;
-    background-size: @bgSize;
-}
-
-.icon-link-arrow-down {
-    display: inline-block;
-    width: 12px;
-    height: 7px;
-    background: url('/static/icons/5_1/transparent_icons.png') -1284px/2 -845px/2 no-repeat;
+    height: 12px;
+    background: url('/static/icons/5_1/transparent_icons.png') -642px -420px no-repeat;
     background-size: @bgSize;
 }
 
 //小号-灰色向上箭头
 .icon-small-up-arrow {
-    background: url('/static/icons/5_1/transparent_icons.png') -1261px/2 -868px/2 no-repeat;
-    width: 7px;
-    height: 4px;
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -432px no-repeat;
+    width: 8px;
+    height: 8px;
     background-size: @bgSize;
 }
 
 //小号-灰色右箭头
 .icon-small-right-arrow {
-    background: url('/static/icons/5_1/transparent_icons.png') -1315px/2 -864px/2 no-repeat;
-    width: 9px / 2;
+    background: url('/static/icons/5_1/transparent_icons.png') -654px -432px no-repeat;
+    width: 8px;
     height: 8px;
-    background-size: cover;
+    background-size: @bgSize;
 }
 
 //蓝色向下箭头
 .icon-arrow-down {
     display: inline-block;
-    padding: 6px 6px;
-    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
-    background-size: cover;
+    background: url('/static/icons/5_1/transparent_icons.png') -642px -440px no-repeat;
+    background-size: @bgSize;
+    width: 12px;
+    height: 12px;
 }
 
 //蓝色向上箭头
@@ -80,22 +73,10 @@
 //蓝色向右箭头
 .icon-arrow-right {
     display: inline-block;
-    padding: 6px 6px;
-    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
-    transform: rotate(-90deg);
-    -webkit-transform: rotate(-90deg);
-    /* Safari 和 Chrome */
-    background-size: cover;
-}
-
-.icon-arrow-left {
-    display: inline-block;
-    padding: 6px 6px;
-    background: url('/static/icons/pull_arrow.png') 0 0 no-repeat;
-    transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    /* Safari 和 Chrome */
-    background-size: cover;
+    background: url('/static/icons/5_1/transparent_icons.png') -660px -436px no-repeat;
+    background-size: @bg-size;
+    width: 12px;
+    height: 12px;
 }
 
 //搜索icon
