--- a/src/app.less
+++ b/src/app.less
@@ -10,6 +10,7 @@ body {
     -webkit-user-select: none;
     -webkit-text-size-adjust: 100% !important; //禁止ios端调整字体大小
     font-family: STHeitiSC-Light;
+    overflow-y: scroll;
 }
 
 a,
