替换弹出框&优化UI

--- a/src/icon.less
+++ b/src/icon.less
@@ -87,6 +87,14 @@
     background-size: @bg-size;
 }
 
+.icon-search-l{
+    display: block;
+    width: 18px;
+    height: 18px;
+    background: url('/static/icons/search.png') 0 0 no-repeat;
+    background-size: cover;
+}
+
 .icon-search {
     width: 14px;
     height: 14px;
