--- a/src/icon.less
+++ b/src/icon.less
@@ -677,9 +677,16 @@
 
 //白色右箭头
 .icon-arrow-right-white {
-    background: url('/static/icons/5_1/transparent_icons.png') -1343px/2 -839px/2 no-repeat;
-    width: 7px;
-    height: 13px;
+    background: url('/static/icons/5_1/transparent_icons.png') -666px -420px no-repeat;
+    width: 12px;
+    height: 12px;
     background-size: @bgSize;
 }
 
+//省略号
+.icon-ellipsis {
+    background: url('/static/icons/5_1/transparent_icons.png') -630px -1058px no-repeat;
+    width: 12px;
+    height: 12px;
+    background-size: @bgSize;
+}
