数据统计接口

--- a/src/icon.less
+++ b/src/icon.less
@@ -79,6 +79,15 @@
     height: 12px;
 }
 
+//蓝色向左箭头
+.icon-arrow-left {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -648px -436px no-repeat;
+    background-size: @bg-size;
+    width: 12px;
+    height: 12px;
+}
+
 //搜索icon
 .icon-search-gray {
     padding: 6px;
