--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -138,15 +138,17 @@
     margin: -3px auto 0 auto;
     width: 100%;
     min-height: 180px;
-    background-color: #ffffff;
     .actions-table-cell {
         position: relative;
         width: 33.1%;
         float: left;
         text-align: center;
         height: 90px;
-        margin: 0; //border-right: 1px solid #d8d8d8;
-        //border-bottom: 1px solid #d8d8d8;
+        margin: 0;
+        background-color: #ffffff;
+        &:active {
+            background-color: rgba(255, 255, 255, 0.5);
+        }
         i {
             display: block;
             margin: 14px auto 0 auto;
@@ -232,37 +234,61 @@
     width: 100%;
     list-style: none;
     box-sizing: border-box;
+    margin-top: 10px;
+    .border-top(#eeeeee);
     .page-infinite-listitem {
         width: 100%;
         margin: 0;
         background-color: #fff;
-        border-bottom: 1px solid #d8d8d8;
-        min-height: 76px;
+        min-height: 88px;
         position: relative;
-        padding: 8px 0;
-        img {
-            width: 100px;
-            position: absolute;
-            height: 76px;
-            top: 8px;
-            left: 10px;
+        box-sizing: border-box;
+        padding: 0 0 0 14px;
+        &:active {
+            background-color: rgba(255, 255, 255, 0.5);
         }
-        .news-title {
-            width: 100%;
-            display: block;
-            font-size: 18px;
-            margin-left: 0;
-            padding: 0 10px 0 120px;
-            color: #4B4B4B;
-            line-height: 24px;
+        &:last-child {
+            .border-btm(#eeeeee);
+            &::after {
+                bottom: -1px;
+            }
+            .padding::after {
+                display: none;
+                content: none; 
+            }
         }
-        .news-date {
-            width: 100%;
-            position: ABSOLUTE;
-            padding: 0 0 0 120px;
-            font-size: 12px;
-            color: #B5B5B5;
-            bottom: 8px;
+        .padding {
+            box-sizing: border-box;
+            position: relative;
+            .border-btm(#eeeeee);
+            min-height: 88px;
+            img {
+                width: 75px;
+                position: absolute;
+                height: 60px;
+                top: 14px;
+                right: 14px;
+                bottom: 14px;
+                border-radius: 2px;
+            }
+            .news-title {
+                width: 100%;
+                display: block;
+                font-size: 16px;
+                margin-left: 0;
+                padding: 12px 103px 0 0;
+                color: #333333;
+                line-height: 20px;
+                text-align: justify;
+            }
+            .news-date {
+                width: 100%;
+                position: ABSOLUTE;
+                font-size: 12px;
+                color: #999999;
+                bottom: 14px;
+                left: 0;
+            }
         }
     }
 }
