--- a/src/icon.less
+++ b/src/icon.less
@@ -699,3 +699,10 @@
     height: 12px;
     background-size: @bgSize;
 }
+
+.icon-back-black {
+    background: url('/static/icons/5_1/transparent_icons.png') -1356px/2 -840px/2 no-repeat;
+    width: 10px;
+    height: 20px;
+    background-size: @bgSize;
+}
