--- a/src/views/login/login.less
+++ b/src/views/login/login.less
@@ -51,6 +51,10 @@
             padding: 0 38px;
             box-sizing: border-box;
         }
+        .login-btn {
+            margin: 0;
+            width: 100%;
+        }
     }
 }
 
