--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -204,6 +204,7 @@
     }
     .news-tabs-bar {
         margin-top: 10px;
+        padding-bottom: 1px;
         .border-btm(#eeeeee);
     }
     .news-table-view {
