--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -205,7 +205,7 @@
     .news-tabs-bar {
         margin-top: 10px;
         padding-bottom: 1px;
-        .border-btm(#eeeeee);
+        background-color: #fff;
     }
     .news-table-view {
         width: 100%;
