--- a/src/app.less
+++ b/src/app.less
@@ -48,6 +48,10 @@ textarea {
     -webkit-appearance: none;
 }
 
+input, button, select, textarea {
+    outline: 0;
+}
+
 //浮动相关
 .fl {
     float: left;
