--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -135,7 +135,7 @@
         min-height: 180px;
         .actions-table-cell {
             position: relative;
-            width: 33.1%;
+            width: 100% / 3;
             float: left;
             text-align: center;
             height: 90px;
