--- a/src/app.less
+++ b/src/app.less
@@ -3,7 +3,7 @@
 @import "icon.less";
 @import "/style/progressBar.less";
 
-@placeholderDisplay: none;
+@placeholderDisplay: block;
 body {
     margin: 0;
     background-color: #F2F2F2;
