--- a/src/icon.less
+++ b/src/icon.less
@@ -706,3 +706,12 @@
     height: 20px;
     background-size: @bgSize;
 }
+
+//刷新
+.icon-refresh{
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -532px no-repeat;
+    width: 20px;
+    height: 20px;
+    background-size: @bgSize;
+}
