首页功能区

--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -38,6 +38,7 @@
         .table-wrap {
             width: 100%;
             min-height: 180px;
+            margin-bottom: 14x;
             .cell {
                 position: relative;
                 width: 50%;
